# workflow-verify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_basic_pipeline.py  02_crm_workflow.py  03_with_guards.py  04_self_correction.py  05_temporal_deploy.py  06_compliance_review.py  07_custom_schema.py
src/workflow_verify/: __init__.py  cli.py  mcp_server.py
src/workflow_verify/ast/: __init__.py  models.py  schema.py  types.py
src/workflow_verify/correct/: __init__.py  loop.py
src/workflow_verify/registry/: __init__.py  loader.py
src/workflow_verify/registry/schemas/common/: address.yaml  company.yaml  money.yaml  person.yaml
src/workflow_verify/registry/schemas/communication/: email_message.yaml  slack_message.yaml  webhook_payload.yaml
src/workflow_verify/registry/schemas/crm/: crmzero_contact.yaml  hubspot_contact.yaml  hubspot_deal.yaml  salesforce_contact.yaml  salesforce_lead.yaml  salesforce_opportunity.yaml
src/workflow_verify/registry/schemas/data/: csv_row.yaml  postgres_record.yaml  stripe_customer.yaml
src/workflow_verify/registry/schemas/enrichment/: apollo_contact.yaml  clay_enrichment.yaml  clearbit_company.yaml  clearbit_person.yaml
src/workflow_verify/resolvers/: __init__.py  base.py  cache.py  clay.py  crmzero.py  hubspot.py  postgres.py  salesforce.py  stripe.py
src/workflow_verify/trace/: reporter.py
src/workflow_verify/transpile/: __init__.py  python_target.py  temporal.py  typescript.py
src/workflow_verify/verify/: __init__.py  effect_checker.py  engine.py  guard_checker.py  results.py  schema_checker.py  type_checker.py
tests/: test_api.py  test_ast.py  test_cli.py  test_correct.py  test_mcp.py  test_registry.py  test_resolvers.py  test_transpile.py  test_verify.py
tests/fixtures/: invalid_duplicate_schema.json  invalid_guard_bad_field.json  invalid_missing_schema_ref.json  invalid_type_mismatch.json  invalid_undeclared_effect.json  valid_complex_pipeline.json  valid_crm_pipeline.json  valid_with_warnings.json
