[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-verify"
version = "0.1.0"
description = "Pre-execution verification layer for LLM-generated agentic workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic", "openai"]
temporal = ["temporalio"]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_verify"]
